loopfor.LoopFor.scala.code
var x=0
var y=0
while (!estSurBiscuit()) {avance();x=x+1}
prend Biscuit()
for (y<- 0 to x) {recule()}
